bump spring-boot to 4.0.0